[project]
name = "speech-latency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "azure-cognitiveservices-speech>=1.34.0",
    "openai>=1.12.0",
    "deepgram-sdk==3.8.0",
    "azure-storage-blob>=12.19.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.15.1",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
]
